plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.11'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'app'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        resolutionStrategy {
            force 'net.bytebuddy:byte-buddy:1.14.17'
            force 'net.bytebuddy:byte-buddy-agent:1.14.17'
        }
    }
}

repositories {
    mavenCentral()
    // Spring AI는 아직 정식 릴리즈 전이라 마일스톤 저장소가 필요함
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    //spring cloud
    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    implementation 'mysql:mysql-connector-java:8.0.32'
    implementation 'org.apache.kafka:kafka-streams'
    implementation 'org.springframework.kafka:spring-kafka'

    testCompileOnly 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc11'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.3.0'
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    implementation 'org.json:json:20210307'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.postgresql:postgresql:42.6.0'
    implementation platform("com.fasterxml.jackson:jackson-bom:2.17.1")
    implementation "com.fasterxml.jackson.core:jackson-databind"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml"
    //Spring Data Elasticsearch 의존성
    implementation 'org.springframework.data:spring-data-elasticsearch'

    // Logstash JSON 로그 인코더 (Filebeat 연동용)
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    implementation("com.google.genai:google-genai:1.28.0")
    implementation("com.google.cloud:google-cloud-vertexai:1.40.0")

    implementation 'com.yahoofinance-api:YahooFinanceAPI:3.17.0'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //HTML 파싱
    implementation 'org.jsoup:jsoup:1.15.4'

    // RSS 파싱
    implementation 'com.rometools:rome:1.18.0'

    implementation 'io.minio:minio:8.5.7'

    // PDF 텍스트 추출용
    implementation 'org.apache.tika:tika-core:2.9.1'
    implementation 'org.apache.tika:tika-parsers-standard-package:2.9.1'

    // 3. PDF Parsing
    implementation 'org.apache.pdfbox:pdfbox:2.0.29'

    //임베딩
    // 1. Spring AI BOM 추가 (버전 누락 방지)
    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-M1")

    // 2. 이제 버전 번호 없이 선언 가능합니다.
    implementation 'org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter'
    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter'


}

dependencyManagement {
    imports {
        // Spring Boot 3.2.11에 맞는 Spring Cloud BOM
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.3"
    }
}
tasks.named('test') {
    useJUnitPlatform()
}
